@@ -18,7 +18,7 @@ import sys
 import ext_rehashdir # %rehashdir magic
 import ext_rescapture # var = !ls and var = %magic
 import pspersistence # %store magic
-
+import clearcmd # %clear
 # Basic readline config
 
 o = ip.options()
