@@ -3,6 +3,11 @@
 	* iplib.py, ipmaker.py: .ipy extension now means "ipython batch file"
 	in command line. E.g. "ipython test.ipy" runs test.ipy with ipython
 	prefilters, allowing stuff like magics and aliases in the file.
+	
+	* Prompts.py, Extensions/clearcmd.py, ipy_system_conf.py: %clear magic 
+	added. Supported now are "%clear in" and "%clear out" (clear input and 
+	output history, respectively). Also fixed CachedOutput.flush to 
+	properly flush the output cache.
 
 2006-03-28  Ville Vainio  <vivainio@gmail.com>
 
